# ai-zptest

./: .gitignore  README.md  pyproject.toml
zpp/: __init__.py  cli.py  config.py  knowledge.py  llm.py  vector_store.py  webui.py
zpp/knowlage/: aaaaa.docx  全课转写.docx
zpp/templates/: index.html
